style.css
/* ... */
/* ------- Header ------- */

.header {
    display: grid;
    grid-auto-flow: column;
    /* TODO: Improve later */
    grid-template-columns: 6fr 1fr;
}

.header-title {}

.system-label {
    color: var(--accent);
}

.header-title h1 {
    display: block;
    font-family: var(--font-display);
    font-size: 42px;
    font-weight: 800;
    letter-spacing: -0.03em;
    line-height: 1.1;
}

.header-title h1 span {
    color: var(--accent);
    padding: 0;
}

.header-meta {}

.header-meta span {
    color: var(--text-secondary);
}

.header-theme {
    align-self: center;
    justify-self: center;
}

.theme-toggle {
    color: var(--text-secondary);
    background-color: var(--bg-surface);
    border: 2px solid var(--border);
}

.theme-toggle:hover {
    background-color: var(--bg-subtle);
    border: 2px solid var(--border-hover);
}

.theme-toggle:active {
    background-color: var(--bg-elevated);
    border: 2px solid var(--border);
}

.theme-toggle span {}


/* ------- Sections ------- */

.section {
    margin-top: var(--gap-section);
}

.section-header {
    display: flex;
    align-items: center;
    gap: var(--space-3);
    margin: var(--space-6) 0 var(--space-2) 0;
}

.section-num {
    font-size: 12px;
    color: var(--accent);
    font-family: var(--font-mono);
}

.section-title {
    font-family: var(--font-display);
    font-size: 20px;
    font-weight: 700;
}


/* ------- Colour Palette ------- */

.palette-row {}

.palette-swatches {
    display: flex;
    width: 100%;
    height: 60px;
    background-color: var(--bg-subtle);
    border: 2px solid var(--border);
    border-radius: var(--radius-lg);
    margin-bottom: var(--gap-component);
    overflow: hidden;
}

.palette-swatch {
    flex: 1;
    align-content: end;
    padding-left: var(--space-2);
    transition: flex 0.2s;
}

.palette-swatch:hover {
    flex: 2;
}

.palette-swatch:hover .palette-swatch-label {
    display: block;
}

.palette-swatch-label {
    display: none;
}

.token-table {
    padding-top: var(--space-4);
}

.token-table table {
    border-collapse: collapse;
    width: 100%;
}

.token-table th {
    color: var(--text-secondary);
    text-transform: uppercase;
    text-align: start;
}

.token-table tr {
    border-bottom: 1px solid var(--bg-elevated);
    height: 38px;
}

.token-table tbody tr:last-child {
    border-bottom: none;
}

.token-table th, .token-table td {
    padding-left: var(--space-3);
}

.token-table tbody td:nth-child(1) {
    color: var(--accent);
}

.token-table div{
    width: 24px;
    height: 24px;
    border: 2px solid var(--bg-subtle);
    border-radius: var(--radius-sm);
    overflow: hidden;
    margin-left: var(--space-4);
}

.token-bg-base { background-color: var(--bg-base); }
.token-bg-surface { background-color: var(--bg-surface); }
.token-accent { background-color: var(--accent); }
.token-text-primary { background-color: var(--text-primary); }
.token-text-secondary { background-color: var(--text-secondary); }


/* ------- Typography ------- */

.typography-cards {
    display: grid;
    width: 100%;
    min-height: 52em;
    gap: 16px;
    grid-template: repeat(3, 1fr) / repeat(2, 1fr);
}

.typography-card {
    display: grid;
    grid-template: auto 2fr / auto 3fr;
    row-gap: var(--space-4);
}

.typography-card span {}

/* .typography-label {
    justify-self: start;
    align-self: baseline;
    background-color: var(--accent-dim);
    padding: 1px var(--space-3);
    border-radius: var(--radius-md);
    color: var(--accent);
    font-size: 12px;
    font-weight: 800;
} */

.typography-properties {
    justify-self: end;
    align-self: baseline;
    font-size: 12px;
    color: var(--text-secondary);
}

.typography-example {
    grid-area: 2 / 1 / span 2 / span 2;
    justify-self: start;
    align-self: center;
}

.display {
    line-height: 1;
    font-family: var(--font-display);
    font-weight: 800;
    font-size: 48px;
    letter-spacing: -0.03em;
}

.h1 {
    line-height: 1;
    font-family: var(--font-display);
    font-weight: 700;
    font-size: 36px;
}

.h2 {
    line-height: 1;
    font-family: var(--font-display);
    font-weight: 600;
    font-size: 24px;
}

.body {
    line-height: 1.5;
    font-family: var(--font-mono);
    font-weight: 400;
    font-size: 14px;
}

.label {
    line-height: 1;
    font-family: var(--font-mono);
    font-weight: 400;
    font-size: 11px;
    text-transform: uppercase;
    letter-spacing: 0.1em;
    color: var(--text-muted);
}

.code-file-name {
    position: relative;
    bottom: -16px;
    left: var(--space-2);
    line-height: 1;
    font-family: var(--font-mono);
    font-weight: 400;
    font-size: 11px;
    letter-spacing: 0.1em;
    color: var(--text-muted);
}

.code {
    border: 2px solid var(--bg-elevated);
    border-radius: var(--radius-md);
}


/* ------- Spacing ------- */

.spacings {
    width: 100%;
}

.spacing {
    height: 2.5em;
    display: flex;
    align-items: center;
}

.spacing-bar {
    height: 1em;
    margin: 0 var(--space-4) 0 var(--space-3);
    background-color: var(--accent);
    border-radius: var(--radius-full);
}

/* Lines up the spacing bars */
.spacing span:first-child {
    min-width: 84px;
}

.spacing span:last-child {
    color: var(--text-secondary);
}


/* ------- Components ------- */

.components {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: var(--space-4);
    margin: var(--space-2);
}

.btn-row {
    margin: var(--space-2) 0;
}

.btn {
    display: inline-flex;
    align-items: center;
    font-family: var(--font-mono);
    font-size: 12px;
    font-weight: 500;
    padding: var(--space-2) var(--space-4);
    border-radius: var(--radius-md);
    cursor: pointer;
    border: none;
    outline: none;
    transition: all 0.2s;
    text-decoration: none;
    margin: var(--space-2) var(--space-1);
}

.btn-sm {
    padding: var(--space-1) var(--space-3);
    font-size: 11px;
    border-radius: var(--radius-sm);
}
/* ... */

